# ssdll

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/mman-project/: mman.pro
src/ssdll/: basicdictionary.cpp  basicdictionary.h  dictionarybase.cpp  dictionarybase.h  dictionarymetadata.cpp  dictionarymetadata.h  dictionaryprivate.cpp  dictionaryprivate.h  dictziplib.cpp  dictziplib.hpp  indexfile.cpp  indexfile.h  logger.cpp  logger.h  lookupdictionary.cpp  lookupdictionary.h  mapfile.cpp  mapfile.hpp  ssdll.pro  ssdll_global.h  utils.cpp  utils.h  worddata.cpp  worddata.h
src/ssdll-test/: main.cpp  ssdll-test.pro  translatordemo.cpp  translatordemo.h
